# massive-devops

./: .cursorrules  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  version.md
.github/workflows/: README.md  pre-release-devops.yml  pre-release-python.yml  production-release-python.yml  release-devops.yml
actions/devops/changelog-conventional-commit/: README.md  action.yml  requirements.txt
actions/devops/changelog-conventional-commit/src/: cli.py
actions/devops/changelog-conventional-commit/src/templates/: report.md.j2
actions/devops/pr-comment-update/: README.md  action.yml
actions/devops/versioning-branch-semantic/: README.md  action.yml  requirements.txt
actions/devops/versioning-branch-semantic/src/: cli.py
actions/python/autogenerate-docs/: README.md  action.yml  requirements.txt
actions/python/linter-comment/: action.yml  requirements.txt
actions/python/linter-comment/src/: builder.py
actions/python/linter-comment/src/templates/: report.md.j2
actions/python/publish-package/: README.md  action.yaml  requirements.txt
actions/python/pytest-comment/: README.md  action.yml  requirements.txt
actions/python/pytest-comment/src/: builder.py
actions/python/pytest-comment/src/templates/: report.md.j2
actions/python/security-comment/: README.md  action.yml  requirements.txt
actions/python/security-comment/src/: builder.py
actions/python/security-comment/src/templates/: report.md.j2
actions/python/uv-requirements/: README.md  action.yml
docs/: conf.py  index.rst
scripts/: setup-pre-commit.sh
workflows/examples/: README.md  pre_release_demo.yml  production_release_demo.yml
workflows/python/: README.md  production_release.yml
