[project]
name = "massive-devops"
version = "1.0.0"
description = "MassiveDevops : Devops tools for MassiveDataScope"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "MassiveDataScope" },
]
keywords = [
    "ci",
    "cd",
    "devops",
    "tools",
    "github",
]

[project.license]
file = "LICENSE"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs/_build",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "T20",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PL",
]
ignore = [
    "E501",
    "B008",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR2004",
    "PLW2901",
    "T201",
    "B007",
    "ARG001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",
    "S101",
    "T20",
]
"scripts/*" = [
    "T20",
]

[tool.ruff.lint.isort]
known-first-party = [
    "massive_devops",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "jinja2.*",
    "bandit.*",
    "pytest.*",
    "coverage.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    "docs",
]
skips = [
    "B101",
    "B601",
]

[tool.bandit.assert_used]
skips = [
    "*_test.py",
    "test_*.py",
]

[tool.semantic_branch]
prerelease = [
    "hotfix/.*",
    "feature/.*",
    "feat/.*",
    "multifeature/.*",
    "breaking/.*",
    "fix/.*",
]
patch = [
    "hotfix/.*",
    "fix/.*",
]
minor = [
    "feature/.*",
    "feat/.*",
    "multifeature/.*",
]
major = [
    "breaking/.*",
]
prerelease_ignore = [
    "docs/.*",
]
release_ignore = [
    "wip/.*",
    "docs/.*",
    "chore/.*",
]
